// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render default as expected 1`] = `
<div>
  <header
    className="sc-bxivhb lhxQdA"
  >
    <a
      className="sc-bdVaJa xUWLe"
      href="https://www.youtube.com/watch?v=DUT5rEU6pqM"
    >
      Say Hi
    </a>
  </header>
  I never really knew that she could dance like this
  <footer
    className="sc-ifAKCX hYztjM"
  >
    <h4
      className="sc-bZQynM gpHdCB sc-htpNat jOPQFR"
    >
      Joe Purnell © 2018 | Icons by Freepik from www.flaticon.com
    </h4>
  </footer>
</div>
`;

exports[`Layout should render inverted as expected 1`] = `
<div>
  <header
    className="sc-bxivhb cJuWgM"
  >
    <a
      className="sc-bdVaJa dUDdeX"
      href="https://www.youtube.com/watch?v=DUT5rEU6pqM"
    >
      Say Hi
    </a>
  </header>
  She makes a man wants to speak Spanish
  <footer
    className="sc-ifAKCX hYztjM"
  >
    <h4
      className="sc-bZQynM gpHdCB sc-htpNat jOPQFR"
    >
      Joe Purnell © 2018 | Icons by Freepik from www.flaticon.com
    </h4>
  </footer>
</div>
`;
